--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "chart.js": "^4.4.1",
+    "ngx-pagination": "^6.0.3",
     "ngx-socket-io": "^4.4.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.4",
